; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_trace-device.c_fz_trace_clip_path.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_trace-device.c_fz_trace_clip_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@.str = private unnamed_addr constant [11 x i8] c"<clip_path\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c" winding=\22eofill\22\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c" winding=\22nonzero\22\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c">\0A\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"</clip_path>\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i32, i32)* @fz_trace_clip_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_trace_clip_path(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_3__*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = bitcast i32* %15 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %16, %struct.TYPE_3__** %13, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  store i32* %19, i32** %14, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %14, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @fz_trace_indent(i32* %20, i32* %21, i32 %24)
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %14, align 8
  %28 = call i32 @fz_write_printf(i32* %26, i32* %27, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %29 = load i32, i32* %10, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %6
  %32 = load i32*, i32** %7, align 8
  %33 = load i32*, i32** %14, align 8
  %34 = call i32 @fz_write_printf(i32* %32, i32* %33, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  br label %39

35:                                               ; preds = %6
  %36 = load i32*, i32** %7, align 8
  %37 = load i32*, i32** %14, align 8
  %38 = call i32 @fz_write_printf(i32* %36, i32* %37, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  br label %39

39:                                               ; preds = %35, %31
  %40 = load i32*, i32** %7, align 8
  %41 = load i32*, i32** %14, align 8
  %42 = load i32, i32* %11, align 4
  %43 = call i32 @fz_trace_matrix(i32* %40, i32* %41, i32 %42)
  %44 = load i32*, i32** %7, align 8
  %45 = load i32*, i32** %14, align 8
  %46 = call i32 @fz_write_printf(i32* %44, i32* %45, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  %47 = load i32*, i32** %7, align 8
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %49 = load i32*, i32** %9, align 8
  %50 = call i32 @fz_trace_path(i32* %47, %struct.TYPE_3__* %48, i32* %49)
  %51 = load i32*, i32** %7, align 8
  %52 = load i32*, i32** %14, align 8
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = call i32 @fz_trace_indent(i32* %51, i32* %52, i32 %55)
  %57 = load i32*, i32** %7, align 8
  %58 = load i32*, i32** %14, align 8
  %59 = call i32 @fz_write_printf(i32* %57, i32* %58, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %60 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %61 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %61, align 8
  ret void
}

declare dso_local i32 @fz_trace_indent(i32*, i32*, i32) #1

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*) #1

declare dso_local i32 @fz_trace_matrix(i32*, i32*, i32) #1

declare dso_local i32 @fz_trace_path(i32*, %struct.TYPE_3__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
